0.9.17
  * Updated weather stations for Slovakia

0.9.16
  * Added weather stations for Syria

0.9.15
  * Fixed errors in stations coordinates

0.9.14
  * Updated weather stations for India
  * Fixed bug #9340 "Not cities in Indiana, USA"

0.9.13
  * Added field Xsbc-Bugtracker in control file
  * Fixed bug #6127 "Change "Virgin Islands, U.S"

0.9.12
  * Fixed errors for Greece weather stations
  * Fixed errors for Finland weather stations
  * Fixed errors for Norway weather stations
  * Fixed errors for Azerbaijan weather stations
  * Updated weather stations for Germany

0.9.11
  * Added weather stations for Azerbaijan

0.9.10
  * Updated weather stations for Norway
  
0.9.9
  * Updated weather stations for Finland

0.9.8
  * Updated weather stations for Greece

0.9.7
  * Fixed bug #7176 "US GA picks country of Georgia and not state when picking cites"
  * Fixed bug #6127 "Change "Virgin Islands, U.S" "
  * Fixed bug #6126 "case corrections for the country list"

0.9.6
  * Fixed bug #5473 "Small icon for all OMweather packages in application manager"
  * Fixed bug #5773 "Consider using /opt to store the icon and database files"
  * Fixed bug #5995 "United States should be United States of America"

0.9.5
  * Added indexes to database

0.9.4
  * Corrected stations for Italy

0.9.3
  * Changed Section in deb package

0.9.2
  * Changed URLs

0.9.1
  * Fixed memory leaks 

0.9
  * Fixed problem with new data
  * Added icons to package

0.8
  * Preparing for 0.23 version of OMWeather

0.1
  * Inintial release