@@ -1,5 +1,6 @@
 0.9.17
   * Updated weather stations for Slovakia
+  * Updated weather stations for Belarus
 
 0.9.16
   * Added weather stations for Syria
